--- a/componentes/section-image-2.css
+++ b/componentes/section-image-2.css
@@ -1,6 +1,6 @@
 .section-image-2{
     background-image: url('../imagens/Container2.png');
-    width: 100%;
+   
     height: 500px; /* Ajuste a altura conforme necessário */
     background-size: contain;
     background-position: center; /* Centraliza a imagem */
@@ -13,17 +13,66 @@
     display: flex;
     justify-content: space-between; /* Espaça os itens uniformemente */
     align-items: center; /* Centraliza verticalmente */
-    
-    margin-left: 100px;
-    margin-right: 100px;
-    justify-content: space-around;
+    margin-left: 150px;
+    margin-right: 200px;
+   
 }
 .design-image2{
     transform: scale(1.5); /* Aumenta a imagem em 50% */
-    margin-top: 120px;  
+   
 }
 .escrita-Roxa{
-   
+    margin-top: 40px;
+   display: flex;
+   height: 400px;
+   flex-direction: column;
+   justify-content: space-between;
 
    
+   
 }
+.w2{
+    flex-direction: column;
+    color: white;
+    letter-spacing: 0.3px;
+}
+.tratar-buttom{
+    display: flex;
+    justify-content: space-between;
+
+
+  
+}
+.buttão{
+    text-decoration: none;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 15px;
+    font-family: "Montserrat Alternates", sans-serif;
+    animation: textura 3.4s cubic-bezier(0.2, 0.5, 0.9, 0.6) 2s infinite;
+    background-image: linear-gradient(45deg, #9c1abd, #4f1996, #9c1abd, #4f1996);
+    background-size: 400% 200%;
+    transition: all 0.8s;
+}
+@keyframes textura {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
+
+.buttão:hover{
+    background-position: 100% 0;
+}
+.buttão.-buttom{
+    border: none;
+    padding: 10px 15px;
+    font-size: 1em;
+    
+  
+}
+
+
+
