--- a/componentes/responsividade.css
+++ b/componentes/responsividade.css
@@ -12,6 +12,9 @@
         transform: scale(1.1);
         
      }
+     .box{
+        
+     }
      .box.-um{
         margin-top: 30px;
      }
@@ -21,7 +24,7 @@
      .mediaq{
    
         justify-content: center;
-        background: linear-gradient(to bottom, #E9DEFF, #b3b3b388);
+        background: linear-gradient(to bottom, #E9DEFF, #f0e8e888);
         width: 90%;
         border-radius: 0px 20px 20px 0px;
 
@@ -50,6 +53,25 @@
    
     }
 
+
+    .section-image-2{
+        background-image: none;
+        background: linear-gradient(to bottom, #1E0044, #36017a);
+        width: 90%;
+        border-radius: 0px 20px 20px 0px;
+    }
+    .caixa-elementos2{
+   
+       
+        justify-content: space-around; /* Espaça os itens uniformemente */
+
+       margin-left: 30px;
+       gap: 20px;
+    }
+    .design-image2{
+        transform: scale(0.8); 
+    }
+
   }
 
 
@@ -62,9 +84,9 @@
         justify-content: center; /* Ou outra distribuição desejada */
         gap: 25px; /* Espaçamento fixo entre os links */
      }
-     .pai{
-        padding-left: 15px;
-        padding-right: 15px;
+     .centro{
+        padding-left: 25px;
+        padding-right: 25px;
      }
      .main-section{
         flex-direction: column; /* Coloca as caixas em coluna */
@@ -73,7 +95,7 @@
      }
      .box{
         width: clamp(305px, 10vw, 300px); /* Mínimo de 150px, aumenta até 300px */
-        height: clamp(350px, 10vw, 300px); /* Mesma lógica da largura */
+        height: clamp(370px, 10vw, 300px); /* Mesma lógica da largura */
      }
      .wrapper{
         flex-direction: column; /* Coloca os itens em coluna */
@@ -90,7 +112,7 @@
      .mediaq{
    
         justify-content: center;
-        background: linear-gradient(to bottom, #5c1adf, #b3b3b388);
+        background: linear-gradient(to bottom, #E9DEFF, #f0e8e888);
         width: 90%;
         border-radius: 0px 20px 20px 0px;
 
@@ -99,15 +121,36 @@
      .section-image{
         background-image: none;
         margin-top: 90px;
-        
-      
-   
-      
-
      }
      .design-image{
 
         transform: scale(0.80);
    
     }
+
+    .section-image-2{
+        justify-content: center;
+        background: linear-gradient(to bottom, #1E0044, #36017a);
+        width: 90%;
+        border-radius: 0px 20px 20px 0px;
+    }
+
+    .caixa-elementos2{
+
+    
+       gap: 5px;
+    }
+  }
+
+
+  @media (max-width: 700px) {
+
+.design-image{
+    display: none;
+}
+.caixa-elementos2{
+    margin-left: 40px;
+ }
+
+
   }
