--- a/componentes/responsividade.css
+++ b/componentes/responsividade.css
@@ -19,7 +19,7 @@
         margin-top: 30px;
      }
 
-
+/*---------------------------------------------------------------------------*/
 
      .mediaq{
    
@@ -52,7 +52,7 @@
         transform: scale(1.0); /* Aumenta a imagem em 50% */
    
     }
-
+/*---------------------------------------------------------------------------*/
 
     .section-image-2{
         background-image: none;
@@ -74,9 +74,9 @@
 
   }
 
-
+/*---------------------------------------------------------------------------*/
   
-  /* Estilos para celulares */
+  /* Estilos para celulares %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
   @media (max-width: 768px) {
     
     .fileira{
@@ -88,6 +88,7 @@
         padding-left: 25px;
         padding-right: 25px;
      }
+     /*---------------------------------------------------------------------------*/
      .main-section{
         flex-direction: column; /* Coloca as caixas em coluna */
         align-items: center; /* Centraliza as caixas horizontalmente */
@@ -109,6 +110,7 @@
      .box.-um{
         margin-top: 20px;
      }
+     /*---------------------------------------------------------------------------*/
      .mediaq{
    
         justify-content: center;
@@ -117,6 +119,7 @@
         border-radius: 0px 20px 20px 0px;
 
      }
+  
      
      .section-image{
         background-image: none;
@@ -127,10 +130,16 @@
         transform: scale(0.80);
    
     }
+    .escrita{
+        margin-top: 40px;
+     }
+     
+    /*---------------------------------------------------------------------------*/
+
 
     .section-image-2{
         justify-content: center;
-        background: linear-gradient(to bottom, #1E0044, #36017a);
+        background: linear-gradient(to bottom, #4801a3, #36017a);
         width: 90%;
         border-radius: 0px 20px 20px 0px;
     }
@@ -140,8 +149,31 @@
     
        gap: 5px;
     }
+    /*---------------------------------------------------------------------------*/
+    .section3{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .title{
+        margin-left: 45px;
+    }
+
+    
   }
 
+
+
+
+
+
+
+
+
+
+
+
+  /*-$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-*/
 
   @media (max-width: 700px) {
 
