--- a/componentes/section-image-2.css
+++ b/componentes/section-image-2.css
@@ -45,12 +45,12 @@
 }
 .buttão{
     text-decoration: none;
-    color: white;
-    padding: 5px 10px;
+    color: rgb(224, 224, 224);
+    padding: 10px 13px;
     border-radius: 15px;
-    font-family: "Montserrat Alternates", sans-serif;
+    font-family: "Albert Sans", sans-serif;
     animation: textura 3.4s cubic-bezier(0.2, 0.5, 0.9, 0.6) 2s infinite;
-    background-image: linear-gradient(45deg, #9c1abd, #4f1996, #9c1abd, #4f1996);
+    background-image: linear-gradient(45deg, #29015c, #430397, #29015c, #430397);
     background-size: 400% 200%;
     transition: all 0.8s;
 }
