--- a/componentes/main-header.css
+++ b/componentes/main-header.css
@@ -1,8 +1,7 @@
 .main-header{
    height: 600px;
-   max-width: clamp(200px, 100vw, 1400px);
-
-
+   max-width: clamp(88%, 100vw, 100%);
+   margin: auto;
    background-color: #1E0044;
    border-radius: 15px;
    display: flex;
