--- a/componentes/section3.css
+++ b/componentes/section3.css
@@ -4,7 +4,7 @@
     margin: 20px 90px;
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: clamp(88%, 100vw, 100%);
     transition-duration: 0.2s;
 }
 .section3:hover{
